--- a/kARTography/res/values/strings.xml
+++ b/kARTography/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">kARTography</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_take_photo">TakePhotoActivity</string>
+    <string name="title_activity_set_poilocation">SetPOILocationActivity</string>
 
 </resources>
