--- a/kARTography/res/values/strings.xml
+++ b/kARTography/res/values/strings.xml
@@ -6,5 +6,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_take_photo">TakePhotoActivity</string>
     <string name="title_activity_set_poilocation">SetPOILocationActivity</string>
+    <string name="hintTitle">Title. Blank if none.</string>
+    <string name="hintLocation">Location</string>
+    <string name="hintAuthor">Author. Blank if unknown.</string>
+    <string name="hintDescription">Description</string>
+    <string name="submitPhoto">Submit</string>
+    <string name="photo">Photo</string>
+
+
 
 </resources>
