--- a/kARTography/res/values/strings.xml
+++ b/kARTography/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="artist">Artist</string>
     <string name="description">Description</string>
     <string name="title_photo">Title</string>
+    <string name="tap_to">TAP TO TAKE PHOTO</string>
 
 </resources>
