New Login Screen

--- a/kARTography/res/values/strings.xml
+++ b/kARTography/res/values/strings.xml
@@ -41,5 +41,8 @@
     <string name="description">Description</string>
     <string name="title_photo">Title</string>
     <string name="title_activity_login_home">LoginHomeActivity</string>
+    <string name="createAccountCaps">CREATE ACCOUNT</string>
+    <string name="createAccountLowercase">Create Account</string>
+    <string name="loginLowercase">Login</string>
 
 </resources>
